--- a/about/index.html
+++ b/about/index.html
@@ -130,6 +130,7 @@
 
 <p>This site was built with </p>
 <ul>
+<li><a href="https://github.com/iolo/fastpress/">Fastpress</a></li>
 <li><a href="https://pages.github.com/">Github Pages</a></li>
 <li><a href="https://www.ibm.com/plex/">IBM Plex Fonts</a> and <a href="https://www.nerdfonts.com/">NerdFont Patch</a></li>
 </ul>
