--- a/about/index.html
+++ b/about/index.html
@@ -24,6 +24,7 @@
     <link rel="canonical" href="https://iolo.krhttps://iolo.kr/about" />
     <link rel="alternate" type="application/rss+xml" href="https://iolo.kr/rss" />
     <link rel="stylesheet" href="/assets/css/styles.css" />
+    <script src="/assets/js/scripts.js" defer></script>
     <title>About - Quest of Iolo</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/highlight.min.js" integrity="sha512-6yoqbrcLAHDWAdQmiRlHG4+m0g/CT/V9AGyxabG8j7Jk8j3r3K6due7oqpiRMZqcYe9WM2gPcaNNxnl2ux+3tA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script
@@ -46,8 +47,7 @@
   </head>
   <body>
     <header>
-      <img src="/assets/img/iolo50.png" alt="Iolo in Ultima IV with 11x13 pixels"/>
-      <h1>Quest of Iolo</h1>
+      <h1><a href="/" class="nolink">Quest of Iolo</a></h1>
       <nav>
         <a href="/">Home</a>
         <a href="/posts">Posts</a>
@@ -68,8 +68,9 @@
 </blockquote>
 <h2>Experiences</h2>
 <ul>
-<li>2018.08-2023.04 CTO, <a href="https://fastcampus.co.kr">Fastcampus</a>, became <a href="https://day1company.co.kr/">Day1 Company</a><ul>
-<li><a href="https://fastcampus.co.kr">Fastcampus</a>: online/offline/mixed education services for personal customers</li>
+<li>2022.06- Founder &amp; Solitary Programmer, <a href="https://soosoo.tech/">SooSooTech</a></li>
+<li>2018.08-2023.04 CTO, <a href="https://fastcampus.co.kr/">Fastcampus</a>, became <a href="https://day1company.co.kr/">Day1 Company</a><ul>
+<li><a href="https://fastcampus.co.kr/">Fastcampus</a>: online/offline/mixed education services for personal customers</li>
 <li><a href="https://fastcampus.app/">Fastcampus for Business</a>: online education services for enterprise customers</li>
 <li><a href="https://coloso.co.kr/">coloso.co.kr</a>, <a href="https://coloso.us/">coloso.us</a>, <a href="https://coloso.jp">coloso.jp/</a>: multiligual(korean, japanese, english) online education services</li>
 <li><a href="https://zero-base.co.kr/">zero-base.co.kr</a>: online/offline/mixed education services with LMS, and career management, recruiting</li>
@@ -136,8 +137,11 @@
 </ul>
 
 </main>
+    <aside>
+      <input id="themeCheck" type="checkbox">
+    </aside>
     <footer>
-      <p>&copy; 1973-2024 IoloTheBard. All rights reserved.</p>
+      <small>&copy; 1973-2024 IoloTheBard. All rights reserved.</small>
     </footer>
     <script>hljs.configure({languages:[]});hljs.highlightAll();</script>
   </body>
