--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="canonical" href="https://iolo.krhttps://iolo.kr/" />
     <link rel="alternate" type="application/rss+xml" href="https://iolo.kr/rss" />
     <link rel="stylesheet" href="/assets/css/styles.css" />
+    <script src="/assets/js/scripts.js" defer></script>
     <title>Quest of Iolo - Quest of Iolo</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/highlight.min.js" integrity="sha512-6yoqbrcLAHDWAdQmiRlHG4+m0g/CT/V9AGyxabG8j7Jk8j3r3K6due7oqpiRMZqcYe9WM2gPcaNNxnl2ux+3tA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script
@@ -46,8 +47,7 @@
   </head>
   <body>
     <header>
-      <img src="/assets/img/iolo50.png" alt="Iolo in Ultima IV with 11x13 pixels"/>
-      <h1>Quest of Iolo</h1>
+      <h1><a href="/" class="nolink">Quest of Iolo</a></h1>
       <nav>
         <a href="/">Home</a>
         <a href="/posts">Posts</a>
@@ -56,18 +56,21 @@
       </nav>
     </header>
     <main><p>Welcome to Iolo&#39;s Dwelling.</p>
-<p>This is Iolo&#39;s personal homepage contains <a href="/posts">blog posts</a>, <a href="/artifacts">artifacts</a>, and a public <a href="/about">profile</a> et all.</p>
+<p>This is Iolo&#39;s personal homepage contains <a href="/posts">posts</a>, <a href="/artifacts">artifacts</a> and a public <a href="/about">profile</a> and whatever.</p>
 <p>The nickname <a href="https://wiki.ultimacodex.com/wiki/Iolo">Iolo</a> cames from the legendary NPC
 of old-school role-playing game <a href="https://en.wikipedia.org/wiki/Ultima_(series)">Ultima Series</a>
 that altered my whole life.</p>
 <figure>
   <img src="/files/iolo-in-ultima4.png">
-  <figcaption>Iolo in Ultima IV</figcaption>
+  <figcaption>Iolo in Ultima IV, Apple ][+</figcaption>
 </figure>
 
 </main>
+    <aside>
+      <input id="themeCheck" type="checkbox">
+    </aside>
     <footer>
-      <p>&copy; 1973-2024 IoloTheBard. All rights reserved.</p>
+      <small>&copy; 1973-2024 IoloTheBard. All rights reserved.</small>
     </footer>
     <script>hljs.configure({languages:[]});hljs.highlightAll();</script>
   </body>
