--- a/about/index.html
+++ b/about/index.html
@@ -67,7 +67,7 @@
 </blockquote>
 <h2>Experiences</h2>
 <ul>
-<li>2022.06- Founder &amp; Solitary Programmer, <a href="https://soosoo.tech/">SooSooTech</a></li>
+<li>2023.06- Founder &amp; Solitary Programmer, <a href="https://soosoo.tech/">SooSooTech</a></li>
 <li>2018.08-2023.04 CTO, <a href="https://fastcampus.co.kr/">Fastcampus</a>, became <a href="https://day1company.co.kr/">Day1 Company</a><ul>
 <li><a href="https://fastcampus.co.kr/">Fastcampus</a>: online/offline/mixed education services for personal customers</li>
 <li><a href="https://fastcampus.app/">Fastcampus for Business</a>: online education services for enterprise customers</li>
@@ -117,10 +117,11 @@
 </ul>
 <h2>and You can find me on:</h2>
 <ul>
-<li><a href="https://github.com/iolo">GitHub</a></li>
+<li><a href="https://github.com/iolo/">GitHub</a></li>
 <li><a href="https://www.linkedin.com/in/iolothebard/">LinkedIn</a></li>
 <li><a href="https://www.facebook.com/iolothebard/">Facebook</a></li>
-<li><a href="https://twitter.com/iolothebard">Twitter</a></li>
+<li><a href="https://twitter.com/iolothebard/">Twitter</a></li>
+<li><a href="https://youtube.com/@iolo6502/">YouTube</a></li>
 <li>or somewhere in <a href="https://goo.gl/maps/zGWvqxtDfwZUpH6m9">Jeju island</a></li>
 </ul>
 <figure>
@@ -132,7 +133,7 @@
 <ul>
 <li><a href="https://github.com/iolo/fastpress/">Fastpress</a></li>
 <li><a href="https://pages.github.com/">Github Pages</a></li>
-<li><a href="https://www.ibm.com/plex/">IBM Plex Fonts</a> and <a href="https://www.nerdfonts.com/">NerdFont Patch</a></li>
+<li><a href="https://github.com/iolo/7x14-fonts/">7x14 Fonts</a></li>
 </ul>
 
 </main>
