--- a/artifacts/index.html
+++ b/artifacts/index.html
@@ -54,9 +54,44 @@
         <a href="/about">About</a>
       </nav>
     </header>
-    <main><blockquote>
-<p><code>Error: NOT_YET_IMPLEMENTED</code></p>
-</blockquote>
+    <main><h3>presentations</h3>
+<ul>
+<li><a href="https://www.slideshare.net/slideshow/ss-ef1c/272333739">개인정보를 피해갈 수 없는 개발자를 위한 안내서</a> Aug. 2024</li>
+<li><a href="https://www.slideshare.net/slideshow/ai-ai-2d08/270030962">AI 시대를 준비하는 개발자를 위한 안내서</a> Mar. 2024</li>
+<li><a href="https://www.slideshare.net/slideshow/http-pdf/251903851">(면접에 자주 나오는) HTTP : 브라우저에서 서버까지</a> Jun. 2022</li>
+<li><a href="https://www.slideshare.net/slideshow/sudo-2022/272333852">SUDO 2022 질주본능 스타트업을 위한 개발 조직 구성</a> Jan. 2022</li>
+<li><a href="https://www.slideshare.net/slideshow/javaspring-nodejs-2/65553950">Java/Spring과 Node.js의 공존2 - J2V8을 활용한 자바에 빌붙기</a> Aug. 2016</li>
+<li><a href="https://www.slideshare.net/slideshow/ss-59970571/59970571">백세코딩</a> May 2016</li>
+<li><a href="https://www.slideshare.net/slideshow/20151112-playnodespringnodejs/55064211">Java/Spring과 Node.js의 공존 : Java/Spring 전성시대에 Node.js가 살아남는법</a> Nov. 2015</li>
+<li><a href="https://www.slideshare.net/slideshow/ss-16821763/16821763">프론트엔드 웹앱 프레임워크 - Bootstrap, Backbone 그리고 AngularJS</a> Feb. 2013</li>
+<li><a href="https://www.slideshare.net/slideshow/past-present-future-of-web-application-framework/1514783://www.slideshare.net/slideshow/past-present-future-of-web-application-framework/15147837">웹 애플리케이션 프레임워크의 과거, 현재 그리고 미래 : 봄날은 간다</a> Nov. 2012</li>
+<li><a href="https://www.slideshare.net/slideshow/api-for-venusian/13724113">API를 준비하는 금성인을 위한 안내서</a> Jul. 2012</li>
+<li><a href="https://www.slideshare.net/slideshow/gnome-architecture/8774">Gnome Architecture</a> Nov. 2006</li>
+<li>...</li>
+</ul>
+<h3>softwares</h3>
+<ul>
+<li><a href="/appspresso">appspresso</a> : Cross-platform Mobile App Development Platform</li>
+<li><a href="/fastpress">fastpress</a> : Yet Another Static Site Generator</li>
+<li>...</li>
+</ul>
+<h3>retro</h3>
+<ul>
+<li><a href="/apple2-disk-manager">apple2-disk-manager</a> : Apple II Dos and ProDOS Disk Manager</li>
+<li><a href="/apple2-image-converter">apple2-image-converter</a> : Apple II Hi-res and Double Hi-res Image Converter</li>
+<li><a href="/apple2-picture-books">apple2-picture-books</a> : Applesoft Basic Program for Picture Books</li>
+<li><a href="/call3327">call3327</a> : Restoration of <code>CALL 3327</code> Korean Program for Apple II</li>
+<li><a href="/esp8266-wifi-modem">esp8266-wifi-modem</a> : ESP8266 WiFi Modem for Apple II with Super Serial Card</li>
+<li><a href="/sun-type6-keyboard">sun-type6-keyboard</a> : USB Converter for Sun Type 6 Keyboard</li>
+<li><a href="https://github.com/iolo/x2kbd">x2kbd</a> : PS/2 Converter for MSX X-2(CPC-400) Keyboard</li>
+<li>...</li>
+</ul>
+<h3>fonts</h3>
+<ul>
+<li><a href="7x12-fonts">7x12-fonts</a> : TrueType and Web Fonts based on 7x14 Bitmap Font for Apple II</li>
+<li><a href="/call3327-fonts">call3327-fonts</a> : TrueType and Web Fonts from <code>CALL 3327</code> Korean Program for Apple II</li>
+<li>...</li>
+</ul>
 
 </main>
     <aside>
