--- a/artifacts/index.html
+++ b/artifacts/index.html
@@ -20,7 +20,7 @@
     <meta name="twitter:url" content="https://iolo.krhttps://iolo.kr/artifacts" />
     <meta name="twitter:image:src" content="/assets/img/iolo50.png" />
     
-    <link rel="canonical" href="https://iolo.krhttps://iolo.kr/artifacts" />
+    <link rel="canonical" href="https://iolo.kr/artifacts" />
     <link rel="alternate" type="application/rss+xml" href="https://iolo.kr/rss" />
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <script src="/assets/js/scripts.js" defer></script>
@@ -88,7 +88,7 @@
 </ul>
 <h3>fonts</h3>
 <ul>
-<li><a href="7x12-fonts">7x12-fonts</a> : TrueType and Web Fonts based on 7x14 Bitmap Font for Apple II</li>
+<li><a href="/7x12-fonts">7x12-fonts</a> : TrueType and Web Fonts based on 7x12 Bitmap Fonts for Apple II</li>
 <li><a href="/call3327-fonts">call3327-fonts</a> : TrueType and Web Fonts from <code>CALL 3327</code> Korean Program for Apple II</li>
 <li>...</li>
 </ul>
