--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,7 @@
     <meta name="twitter:url" content="https://iolo.krhttps://iolo.kr/about" />
     <meta name="twitter:image:src" content="/assets/img/iolo50.png" />
     
-    <link rel="canonical" href="https://iolo.krhttps://iolo.kr/about" />
+    <link rel="canonical" href="https://iolo.kr/about" />
     <link rel="alternate" type="application/rss+xml" href="https://iolo.kr/rss" />
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <script src="/assets/js/scripts.js" defer></script>
