--- a/artifacts/index.html
+++ b/artifacts/index.html
@@ -54,8 +54,13 @@
         <a href="/about">About</a>
       </nav>
     </header>
-    <main><h3>presentations</h3>
+    <main><h3>publications</h3>
 <ul>
+<li><a href="https://product.kyobobook.co.kr/detail/S000200381165">개발자 원칙</a>, 2022, 골든래빗</li>
+</ul>
+<h3>presentations</h3>
+<ul>
+<li><a href="https://www.slideshare.net/slideshow/htmx-2024/274315966">고전적인 기술로 현대적인 웹앱 만들기 : HTMX</a> Dec. 2024</li>
 <li><a href="https://www.slideshare.net/slideshow/ss-ef1c/272333739">개인정보를 피해갈 수 없는 개발자를 위한 안내서</a> Aug. 2024</li>
 <li><a href="https://www.slideshare.net/slideshow/ai-ai-2d08/270030962">AI 시대를 준비하는 개발자를 위한 안내서</a> Mar. 2024</li>
 <li><a href="https://www.slideshare.net/slideshow/http-pdf/251903851">(면접에 자주 나오는) HTTP : 브라우저에서 서버까지</a> Jun. 2022</li>
