--- a/about/index.html
+++ b/about/index.html
@@ -109,7 +109,7 @@
 <li>Hadoop, HBase, Spark and Elasticsearch for Log Pipelines</li>
 <li>Android, iOS, and Hybrid for Mobile App Development</li>
 <li>Swing, SWT, Eclipse RCP for Java Desktop Application Development</li>
-<li>GTK, Motif for Linux Desktop Application Application Development</li>
+<li>GTK, Motif for Linux Desktop Application Development</li>
 <li>MFC, Win32, DirectX for Windows Desktop Application Development</li>
 <li>and...</li>
 <li>APPLE ][+ BASIC, 6502 Assembly, UCSD Pascal, Turbo Pascal, BDS-C, ...</li>
@@ -133,7 +133,7 @@
 <ul>
 <li><a href="https://github.com/iolo/fastpress/">Fastpress</a></li>
 <li><a href="https://pages.github.com/">Github Pages</a></li>
-<li><a href="https://github.com/iolo/7x14-fonts/">7x14 Fonts</a></li>
+<li><a href="https://github.com/iolo/7x12-fonts/">7x12 Fonts</a></li>
 </ul>
 
 </main>
