--- a/artifacts/index.html
+++ b/artifacts/index.html
@@ -61,6 +61,7 @@
 <h3>presentations</h3>
 <ul>
 <li><a href="https://www.slideshare.net/slideshow/htmx-2024/274315966">고전적인 기술로 현대적인 웹앱 만들기 : HTMX</a> Dec. 2024</li>
+<li><a href="https://www.slideshare.net/slideshow/sudo-2022/272333852">SUDO 2022 - 질주본능 스타트업을 위한 개발조직 구성</a> Oct. 2024</li>
 <li><a href="https://www.slideshare.net/slideshow/ss-ef1c/272333739">개인정보를 피해갈 수 없는 개발자를 위한 안내서</a> Aug. 2024</li>
 <li><a href="https://www.slideshare.net/slideshow/ai-ai-2d08/270030962">AI 시대를 준비하는 개발자를 위한 안내서</a> Mar. 2024</li>
 <li><a href="https://www.slideshare.net/slideshow/http-pdf/251903851">(면접에 자주 나오는) HTTP : 브라우저에서 서버까지</a> Jun. 2022</li>
@@ -71,6 +72,12 @@
 <li><a href="https://www.slideshare.net/slideshow/ss-16821763/16821763">프론트엔드 웹앱 프레임워크 - Bootstrap, Backbone 그리고 AngularJS</a> Feb. 2013</li>
 <li><a href="https://www.slideshare.net/slideshow/past-present-future-of-web-application-framework/1514783://www.slideshare.net/slideshow/past-present-future-of-web-application-framework/15147837">웹 애플리케이션 프레임워크의 과거, 현재 그리고 미래 : 봄날은 간다</a> Nov. 2012</li>
 <li><a href="https://www.slideshare.net/slideshow/api-for-venusian/13724113">API를 준비하는 금성인을 위한 안내서</a> Jul. 2012</li>
+<li><a href="https://www.slideshare.net/slideshow/20-13724088/13724088">모바일/클라우드 시대를 준비하는 개발자들을 위한 안내서</a> Jul. 2012</li>
+<li><a href="https://www.slideshare.net/slideshow/ss-13724051/13724051">하이브리드앱 개발 전략과 이슈</a> Jul. 2012</li>
+<li><a href="https://www.slideshare.net/slideshow/ss-10414146/10414146">하이브리드앱 아키텍쳐 및 개발 사례</a> Dec. 2011</li>
+<li><a href="https://www.slideshare.net/slideshow/ss-7719322/7719322">단일 페이지 인터페이스 모바일 웹앱 개발</a> Apr. 2011</li>
+<li><a href="https://www.slideshare.net/slideshow/hybrid-mobile-application-framework/3657033">Hybrid Mobile Application Frameworks</a> Apr. 2010</li>
+<li><a href="https://www.slideshare.net/iolo/javascript-common-mistakes">Javascript Common Mistakes</a> Dec. 2009</li>
 <li><a href="https://www.slideshare.net/slideshow/gnome-architecture/8774">Gnome Architecture</a> Nov. 2006</li>
 <li>...</li>
 </ul>
@@ -86,8 +93,8 @@
 <li><a href="/apple2-image-converter">apple2-image-converter</a> : Apple II Hi-res and Double Hi-res Image Converter</li>
 <li><a href="/apple2-picture-books">apple2-picture-books</a> : Applesoft Basic Program for Picture Books</li>
 <li><a href="/call3327">call3327</a> : Restoration of <code>CALL 3327</code> Korean Program for Apple II</li>
-<li><a href="/esp8266-wifi-modem">esp8266-wifi-modem</a> : ESP8266 WiFi Modem for Apple II with Super Serial Card</li>
-<li><a href="/sun-type6-keyboard">sun-type6-keyboard</a> : USB Converter for Sun Type 6 Keyboard</li>
+<li><a href="https://github.com/iolo/esp8266-wifi-modem">esp8266-wifi-modem</a> : ESP8266 WiFi Modem for Apple II with Super Serial Card</li>
+<li><a href="https://github.com/iolo/sun-type6-keyboard">sun-type6-keyboard</a> : USB Converter for Sun Type 6 Keyboard</li>
 <li><a href="https://github.com/iolo/x2kbd">x2kbd</a> : PS/2 Converter for MSX X-2(CPC-400) Keyboard</li>
 <li>...</li>
 </ul>
