--- a/artifacts/index.html
+++ b/artifacts/index.html
@@ -84,7 +84,7 @@
 <h3>softwares</h3>
 <ul>
 <li><a href="/appspresso">appspresso</a> : Cross-platform Mobile App Development Platform</li>
-<li><a href="/artifacts/fastpress">fastpress</a> : Yet Another Static Site Generator</li>
+<li><a href="/fastpress">fastpress</a> : Yet Another Static Site Generator</li>
 <li>...</li>
 </ul>
 <h3>retro</h3>
@@ -93,6 +93,7 @@
 <li><a href="/apple2-image-converter">apple2-image-converter</a> : Apple II Hi-res and Double Hi-res Image Converter</li>
 <li><a href="/apple2-picture-books">apple2-picture-books</a> : Applesoft Basic Program for Picture Books</li>
 <li><a href="/call3327">call3327</a> : Restoration of <code>CALL 3327</code> Korean Program for Apple II</li>
+<li><a href="/apple2-tl1">apple2-tl1</a> : Restoration of Apple II TL/1 Compiler and Runtime</li>
 <li><a href="https://github.com/iolo/esp8266-wifi-modem">esp8266-wifi-modem</a> : ESP8266 WiFi Modem for Apple II with Super Serial Card</li>
 <li><a href="https://github.com/iolo/sun-type6-keyboard">sun-type6-keyboard</a> : USB Converter for Sun Type 6 Keyboard</li>
 <li><a href="https://github.com/iolo/x2kbd">x2kbd</a> : PS/2 Converter for MSX X-2(CPC-400) Keyboard</li>
@@ -100,6 +101,7 @@
 </ul>
 <h3>fonts</h3>
 <ul>
+<li><a href="/8x4x4-fonts">8x4x4-fonts</a> : TrueType and Web Fonts from Old Korean 8x4x4 Bitmap Fonts for PC/DOS</li>
 <li><a href="/7x12-fonts">7x12-fonts</a> : TrueType and Web Fonts based on 7x12 Bitmap Fonts for Apple II</li>
 <li><a href="/call3327-fonts">call3327-fonts</a> : TrueType and Web Fonts from <code>CALL 3327</code> Korean Program for Apple II</li>
 <li>...</li>
