--- a/artifacts/index.html
+++ b/artifacts/index.html
@@ -94,6 +94,7 @@
 <li><a href="/apple2-picture-books">apple2-picture-books</a> : Applesoft Basic Program for Picture Books</li>
 <li><a href="/call3327">call3327</a> : Restoration of <code>CALL 3327</code> Korean Program for Apple II</li>
 <li><a href="/apple2-tl1">apple2-tl1</a> : Restoration of Apple II TL/1 Compiler and Runtime</li>
+<li><a href="https://github.com/iolo/fc-av-mod">fc-av-mod</a> : Yet another Famicom AV mod with Power LED and USB Power.</li>
 <li><a href="https://github.com/iolo/esp8266-wifi-modem">esp8266-wifi-modem</a> : ESP8266 WiFi Modem for Apple II with Super Serial Card</li>
 <li><a href="https://github.com/iolo/sun-type6-keyboard">sun-type6-keyboard</a> : USB Converter for Sun Type 6 Keyboard</li>
 <li><a href="https://github.com/iolo/x2kbd">x2kbd</a> : PS/2 Converter for MSX X-2(CPC-400) Keyboard</li>
