--- a/artifacts/index.html
+++ b/artifacts/index.html
@@ -56,7 +56,7 @@
     </header>
     <main><h3>publications</h3>
 <ul>
-<li><a href="https://product.kyobobook.co.kr/detail/S000200381165">개발자 원칙</a>, 2022, 골든래빗</li>
+<li><a href="https://product.kyobobook.co.kr/detail/S000214054310">개발자 원칙</a>, 2022-2024, 골든래빗</li>
 </ul>
 <h3>presentations</h3>
 <ul>
@@ -103,6 +103,7 @@
 <h3>fonts</h3>
 <ul>
 <li><a href="/8x4x4-fonts">8x4x4-fonts</a> : TrueType and Web Fonts from Old Korean 8x4x4 Bitmap Fonts for PC/DOS</li>
+<li><a href="/6x2x1-fonts">6x2x1-fonts</a> : TrueType and Web Fonts from Older Korean 6x2x1 Bitmap Fonts for Apple II</li>
 <li><a href="/7x12-fonts">7x12-fonts</a> : TrueType and Web Fonts based on 7x12 Bitmap Fonts for Apple II</li>
 <li><a href="/call3327-fonts">call3327-fonts</a> : TrueType and Web Fonts from <code>CALL 3327</code> Korean Program for Apple II</li>
 <li>...</li>
