--- a/artifacts/index.html
+++ b/artifacts/index.html
@@ -89,6 +89,7 @@
 </ul>
 <h3>retro</h3>
 <ul>
+<li><a href="/fed">fed</a> : Old-school Bitmap Font EDitor made with <a href="https://claude.ai/code">Claude Code</a></li>
 <li><a href="/apple2-disk-manager">apple2-disk-manager</a> : Apple II Dos and ProDOS Disk Manager</li>
 <li><a href="/apple2-image-converter">apple2-image-converter</a> : Apple II Hi-res and Double Hi-res Image Converter</li>
 <li><a href="/apple2-picture-books">apple2-picture-books</a> : Applesoft Basic Program for Picture Books</li>
@@ -105,7 +106,7 @@
 <li><a href="/8x4x4-fonts">8x4x4-fonts</a> : TrueType and Web Fonts from Old Korean 8x4x4 Bitmap Fonts for PC/DOS</li>
 <li><a href="/6x2x1-fonts">6x2x1-fonts</a> : TrueType and Web Fonts from Older Korean 6x2x1 Bitmap Fonts for Apple II</li>
 <li><a href="/7x12-fonts">7x12-fonts</a> : TrueType and Web Fonts based on 7x12 Bitmap Fonts for Apple II</li>
-<li><a href="/call3327-fonts">call3327-fonts</a> : TrueType and Web Fonts from <code>CALL 3327</code> Korean Program for Apple II</li>
+<li><a href="/call3327-fonts">call3327-fonts</a> : TrueType and Web Fonts from <a href="/call3327">CALL 3327</a> Korean Program for Apple II</li>
 <li>...</li>
 </ul>
 
